--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Список элементов</h1>
+    <h1>TO-DO LIST</h1>
     <form id="addForm">
       <input type="text" id="itemInput" placeholder="Введите элемент" required />
       <button type="submit">Добавить</button>
